1.1.14 - TBD
    * Fixed gray wool having the same texture as light gray wool

1.1.13d - 2013-07-24
    * Renamed the "Load Texture Pack" button to "Load Resource Pack"
    * Fixed cobblestone texture not loading correctly for Minecraft 1.6
    * Fixed default texture pack loading error for Minecraft 1.6

1.1.13 - 2013-07-23
    * Added support for new "resource packs" (replaced texture packs in
    Minecraft 1.6)
    * Implemented rendering of Minecraft 1.6 blocks:
        + Carpet
        + Hay Bale
        + Hardened Clay
        + Stained Clay
        + Coal Block

1.1.12 - 2013-06-05
    * Fixed some mirrored textures
    * Fixed autofocus not working
    * Improved rendering speed by using Apache Commons Math library (twirrim)
    * Chunky now remembers the number of render threads setting
    * Sanitize scene names by removing problematic characters
    * Manually unlocking the render lock now leaves the render controls
    unlocked until rendering is re-started
    * Re-loading chunks using the "Load Selected Chunks" button does not
    move the camera
    * Fixed warping effect in fisheye and panoramic projection modes when
    DoF is enabled. This reverts the depth of field effect to the 1.1.10
    behavior for fisheye and panoramic projection.
    * The number of render threads can now be controlled during rendering
    * The controls for number of render threads have been moved to the
    Advanced tab of the Render Controls dialog
    * Added CPU load controls in the Advanced tab of the Render Controls dialog

1.1.11 - 2013-04-28
    * It is now possible to lock the render controls to avoid inadvertent
    render restarts.  The locking can be either manual or automatic.
    * Adjusted the depth of field effect - depth of field is now planar again.
    This reverts the spherical depth of field effect from 1.1.10
    * Renamed the "Focal Offset" setting to "Subject Distance"
    * The Windows installer skips overwriting the (more memory) shortcut if