@@ -132,7 +132,7 @@ public class TestRenderer extends Thread implements ViewListener,
 
 		camera = new Camera(this);
 		camera.setPosition(new Vector3d(.5, .5, 2));
-		camera.setView(-3*Math.PI/4, -5*Math.PI/16);
+		camera.setView(-3*Math.PI/4, -5*Math.PI/16, 0);
 
 		if (targetFile.isEmpty()) {
 			view = new Chunk3DView(this, parent);
